env file changes

--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@
 
 # message for testing branch
 
-DB_HOST=dpg-d0k5muffte5s738cjub0-a.singapore-postgres.render.com
+DB_HOST=dpg-d0q96si4d50c73c1i38g-a.oregon-postgres.render.com
 DB_PORT=5432
-DB_USER=mohan
-DB_PASSWORD=vjXT0V1FCjzI7yhPinw0SyHPNF3938Qd
-DB_NAME=resume_db_g5ur
+DB_USER=bharath
+DB_PASSWORD=wZ09AU7SiZqAwLiQPJ7FNO3UaSbARrlJ
+DB_NAME=resume_database_bdyf
 JWT_SECRET=supersecretkey123
 
